<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ALLOFGIST</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to textview in Start screen -->
    <string name="title_start">ALL OF</string>
    <string name="subtitle_start">GIST integrated application</string>
    <string name="login_start">LOGIN</string>
    <string name="signup_ques_start">아직 회원이 아니신가요?</string>
    <string name="signup_start">회원가입</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="email_etc">\u0040 gmail.com</string>
    <string name="title_activity_add_schedule">AddSchedule</string>

    <!-- Strings related to edittext(id,pw) in start screen -->
    <string name="edittext_id_hint"><font size="15">ID</font></string>
    <string name="edittext_pw_hint"><font size="15">Password</font></string>

    <!-- Strings related to textview in signup screen -->
    <string name="textview_nickname_signup"><font size="15">Nickname </font></string>
    <string name="textview_id_signup"><font size="15">ID</font></string>
    <string name="textview_pw_signup"><font size="15">Password</font></string>
    <string name="textview_pw_check_signup"><font size="15">Password Check</font></string>
    <string name="textview_email_signup"><font size="15">Google Email</font></string>


    <!-- Strings related to textview in MainActivity screen -->
    <string name="title_main">ALL OF GIST</string>
    <string name="favorite_site_main">즐겨찾는 사이트</string>
    <string name="diary_main">일정관리</string>
    <string name="allsite_main">Websites</string>
    <string name="website_search_hint">예) Zeus, Email</string>
    <string name="allsite_tutorial_main">Information</string>
    <string name="food_diary_main">Carte</string>
    <string name="anonymous_forum_main">Bulletin board</string>
    <string name="favorite_setting_main">즐겨찾기 관리하기</string>
    <string name="advertisement_main">홍보판</string>
    <string name="favorite_notice_main">즐겨찾기를 추가해주세요.</string>


    <!-- Strings related to edittext in signup screen -->
    <string name="title_signup">Sign up</string>
    <string name="edittext_nickname_hint_signup"><font size="13">익명게시판에서 사용되는 닉네임입니다.</font></string>
    <string name="edittext_id_hint_signup"><font size="13">아이디를 입력해주세요.</font></string>
    <string name="edittext_pw_hint_signup"><font size="13">패스워드를 입력해주세요.</font></string>
    <string name="edittext_pw_check_hint_signup"><font size="13">패스워드를 다시 입력해주세요.</font></string>
    <string name="edittext_email_hint_signup"><font size="13">이메일을 입력해주세요.</font></string>
    <string name="button_signup">SIGN UP</string>

    <!-- Strings related to button in tutorial screen -->
    <string name="tab_official_text">공식</string>
    <string name="tab_organization_text">조직</string>
    <string name="tab_circle_text">동아리</string>
    <string name="title_favorite">Favorite</string>
    <string name="apply_button">Apply</string>
    <string name="title_tutorial">Tutorial</string>

    <!-- Strings related to MyMenu -->
    <string name="title_my">My</string>
    <string name="logout_notice">정말 로그아웃 하시겠습니까?</string>
    <string name="my_hello">안녕하세요</string>
    <string name="my_hey">님</string>
    <string name="profile_notice">프로필 편집</string>
    <string name="delete_user_notice">정말 탈퇴 하시겠습니까?</string>
    <string name="credit_calculator_main">학점 계산기</string>
    <string name="user_information_main">회원정보</string>
    <string name="delete_user_main">회원 탈퇴</string>
    <string name="logout_main">로그아웃</string>

    <!-- Strings related to MyEditProfileMenu -->
    <string name="title_edit_profile">프로필 편집하기</string>
    <string name="check_main">확인</string>

    <!-- Strings related to CalendarMain -->
    <string name="title_calendar_main">Schedule</string>
    <!-- Strings related to AcademicCalendarList -->
    <string name="title_academic_calendar">Academic calendar</string>

    <!-- Strings related to major site set popup menu -->
    <string name="jungijeonja">전기전자컴퓨터공학부</string>
    <string name="sinsojae">신소재공학부</string>
    <string name="gigae">기계공학부</string>
    <string name="jiguhwan">지구·환경공학부</string>
    <string name="sangmeong">생명과학부</string>
    <string name="muligwang">물리·광과학과</string>
    <string name="hwahak">화학과</string>
    <string name="yunghab">융합기술원</string>
    <string name="nanobio">나노바이오재료전자공학과</string>

    <!-- Strings related to food diary-->
    <string name="title_food_diary">Carte</string>
    <string name="first_restaurant_first_floor">제1학생식당 (1F)</string>
    <string name="first_restaurant_second_floor">제1학생식당 (2F)</string>
    <string name="second_restaurant">제2학생식당</string>
    <string name="notice_food_diary">하단의 버튼을 눌러주세요.</string>

    <!-- Strings related to menuButton in anonymous forum preview -->
    <string name="title_preview">GIST</string>
    <string name="menu_button_home">홈</string>
    <string name="menu_button_best">인기글 게시판</string>
    <string name="menu_button_overview">전체글</string>
    <string name="menu_button_search">검색하기</string>
    <string name="menu_button_write">글쓰기</string>
    <string name="devider">"  |  "</string>

    <!-- Strings related to anonymous forum view -->
    <string name="search_by_nickname">[작성글 검색]</string>
    <string name="like_button">좋아요</string>
    <string name="unlike_button">싫어요</string>
    <string name="comment_button">댓글 달기</string>
    <string name="none_like_state">가장 먼저 좋아요를 눌러보세요</string>
    <string name="comment_hint">댓글 입력</string>

    <!-- Strings related to anonymous forum write -->
    <string name="submit_button">게시하기</string>
    <string name="edit_button">수정하기</string>
    <string name="write_nickname_question">닉네임으로 게시할까요?</string>
    <string name="write_nickname_notice">미선택시, 닉네임 대신 \'익명\'으로 게시됩니다.</string>
    <string name="write_noname">익명</string>
    <string name="write_writer">작성자&#032;|&#032;익명</string>
    <string name="write_title">제목을 적어주세요.</string>
    <string name="write_hint"><font size="12">여기를 눌러 글을 작성할 수 있습니다.\n\nGIST 익명 게시판이 오랫동안 유지될 수 있도록 아래의 내용은 꼭 지켜주세요 :)\n\n[이용 규칙]\n1. 욕설, 비하, 음란물, 개인정보가 포함된 게시물 게시\n2. 특정인이나 단체/지역을 비방하는 행위\n3. 규제가 필요할 정도의 과도한 도배\n\n위의 유의사항을 위배한 게시물이 등록 시 삭제 및 차단 조치가 될 수 있습니다.</font></string>

    <!-- Strings related to anonymous forum search classification menu -->
    <string name="all_search">전체</string>
    <string name="title_search">제목</string>
    <string name="content_search">내용</string>
    <string name="writer_search">글쓴이</string>
    <string name="title_with_content_search">제목+내용</string>

    <string name="only_best_search">인기글만 검색</string>
    <string name="no_search_result">검색 결과가 없습니다.</string>

    <!-- Strings related to notice popup window -->
    <string name="cancel">취소</string>
    <string name="ok">확인</string>
    <string name="delete_question">삭제하시겠습니까?</string>
    <string name="edit_question">수정하시겠습니까?</string>
    <string name="edit_cancel_question">수정을 정말 취소하시겠습니까?</string>

    <!-- Strings related to anonymous forum view more vert menu -->
    <string name="delete_forum">삭제</string>
    <string name="edit_forum">수정</string>
    <string name="screentshot_forum">전체 화면 캡쳐하기</string>
    <string name="copy_comment">댓글 복사</string>
    <string name="write_comment">답글 쓰기</string>
    <string name="search_comment_mine">내 작성글 검색</string>
    <string name="search_comment">작성글 검색</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_user_setting">UserSetting</string>

    <!-- Strings related to Credit Calculator -->
    <string name="title_credit_calculator">GPA calculator</string>
    <string name="type_classification">Type</string>
    <string name="title_classification">Title</string>
    <string name="credits_classification">Credits</string>
    <string name="grade_classification">Grade</string>
    <string name="notice_reset">입력하신 모든 내용을 삭제하시겠습니까?</string>
    <string name="notice_edit_reset">수정 작업을 취소하시겠습니까?</string>
    <string name="notice_delete_log">해당 기록을 삭제하시겠습니까?</string>
    <string name="reset_calculator">초기화</string>
    <string name="add_calculator">과목 추가하기</string>
    <string name="save_log_calculator">기록 저장</string>
    <string name="edit_log_calculator">기록 수정</string>
    <string name="watch_log_calculator">기록 보기</string>
    <string name="hint_title_calculator">2019학년 2학기</string>
    <string name="total_credits_main_default">Completed Credits &#58; 000 &#47; 000</string>
    <!--<string name="total_credits_main_default">Completed Credits : 000 &#47; 000</string>-->


    <!-- Strings related to AddCreditCalculator-->
    <string name="calculator_add_popup_title">과목 추가하기</string>
    <string name="calculator_edit_popup_title">과목 수정하기</string>
    <string name="calculator_add_popup_save">저장</string>
    <string name="calculator_add_popup_input_type">Type</string>
    <string name="calculator_add_popup_input_title">Title</string>
    <string name="calculator_add_popup_input_credits">Credit</string>
    <string name="calculator_add_popup_input_grade">Grade</string>
    <string name="calculator_edit">수정</string>

    <!-- Strings related to Calculator add Credits_Popup_Menu -->
    <string name="credit_five">5</string>
    <string name="credit_four">4</string>
    <string name="credit_three">3</string>
    <string name="credit_two">2</string>
    <string name="credit_one">1</string>
    <string name="credit_zero">0</string>

    <!-- Strings related to Calculator add Grade_Popup_Menu -->
    <string name="grade_aplus">A+</string>
    <string name="grade_azero">A0</string>
    <string name="grade_bplus">B+</string>
    <string name="grade_bzero">B0</string>
    <string name="grade_cplus">C+</string>
    <string name="grade_czero">C0</string>
    <string name="grade_dplus">D+</string>
    <string name="grade_dzero">D0</string>
    <string name="grade_f">F</string>

    <!-- Strings related to Calculator load Popup Window -->
    <string name="load_type_top_bar">불러오기 - 구분</string>
    <string name="load_title_top_bar">불러오기 - 과목명</string>
    <string name="load_close_button">닫기</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="configure">Configure</string>
    <string name="title_activity_main2">Main2Activity</string>

    <!-- Strings related to School Mapw -->
    <string name="title_school_map">School map</string>
</resources>
