<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/nav_academic_calendar"
            android:icon="@drawable/academic_calendar_red"
            android:title="@string/title_academic_calendar" />
        <item
            android:id="@+id/nav_credit_calculator"
            android:icon="@drawable/academic_calculater_red"
            android:title="@string/credit_calculator_main" />
    </group>

    <item android:title="@string/user_information_main">
        <menu>
            <item
                android:id="@+id/nav_edit_nickname"
                android:icon="@drawable/change_nickname_red"
                android:title="@string/edit_nickname_main" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout_red"
                android:title="@string/logout_main" />
            <item
                android:id="@+id/nav_delete_user"
                android:icon="@drawable/delete_user_red"
                android:title="@string/delete_user_main" />
        </menu>
    </item>

</menu>
