<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/user_information_main">
        <menu>
            <item
                android:id="@+id/edit_nickname"
                android:icon="@drawable/nickname_change_orange"
                android:title="@string/edit_nickname_main" />
            <item
                android:id="@+id/delete_user"
                android:icon="@drawable/user_delete_orange"
                android:title="@string/delete_user_main" />
            <item
                android:id="@+id/logout"
                android:icon="@drawable/logout_orange"
                android:title="@string/logout_main" />
        </menu>
    </item>

</menu>
