<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity"
    android:orientation="vertical"
    android:background="#FF7F00">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_signup"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        android:fontFamily="@font/noto_sans"
        android:includeFontPadding="false"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="#00FFFFFF"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:background="#00FFFFFF"
        android:text="@string/textview_nickname_signup"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:layout_marginStart="32dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:id="@+id/edittext_nickname"
        android:hint="@string/edittext_nickname_hint_signup"
        android:inputType="text"
        android:textSize="15sp"
        android:textColorHint="#72E4E4E4"
        android:textColor="#8FFFFFFF"
        android:fontFamily="@font/noto_sans"
        android:includeFontPadding="false"
        android:background="@drawable/sign_up_box_layout_design"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:paddingBottom="10dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#00FFFFFF"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:background="#00FFFFFF"
        android:text="@string/textview_id_signup"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:layout_marginStart="32dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:id="@+id/editText_ID"
        android:hint="@string/edittext_id_hint_signup"
        android:textSize="15sp"
        android:textColorHint="#72E4E4E4"
        android:textColor="#8FFFFFFF"
        android:fontFamily="@font/noto_sans"
        android:includeFontPadding="false"
        android:inputType="text"
        android:background="@drawable/sign_up_box_layout_design"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:paddingBottom="10dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#00FFFFFF"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:background="#00FFFFFF"
        android:text="@string/textview_pw_signup"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:layout_marginStart="32dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:inputType="textPassword"
        android:id="@+id/editText_password"
        android:fontFamily="@font/noto_sans"
        android:includeFontPadding="false"
        android:hint="@string/edittext_pw_hint_signup"
        android:textSize="15sp"
        android:textColorHint="#72E4E4E4"
        android:textColor="#8FFFFFFF"
        android:background="@drawable/sign_up_box_layout_design"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:paddingBottom="10dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#00FFFFFF"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:background="#00FFFFFF"
        android:text="@string/textview_pw_check_signup"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:layout_marginStart="32dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:inputType="textPassword"
        android:id="@+id/editText_passwordcheck"
        android:hint="@string/edittext_pw_check_hint_signup"
        android:textSize="15sp"
        android:fontFamily="@font/noto_sans"
        android:includeFontPadding="false"
        android:textColorHint="#72E4E4E4"
        android:textColor="#8FFFFFFF"
        android:background="@drawable/sign_up_box_layout_design"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:paddingBottom="10dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#00FFFFFF"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:background="#00FFFFFF"
        android:text="@string/textview_email_signup"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:layout_marginStart="32dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp">
        <EditText
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:id="@+id/editText_emailid"
            android:fontFamily="@font/noto_sans"
            android:includeFontPadding="false"
            android:hint="@string/edittext_email_hint_signup"
            android:textSize="15sp"
            android:inputType="text"
            android:textColorHint="#72E4E4E4"
            android:textColor="#8FFFFFFF"
            android:background="@drawable/sign_up_box_layout_design"
            android:paddingBottom="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:text="@string/email_etc"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:fontFamily="@font/noto_sans"
            android:includeFontPadding="false"
            android:textColorHint="#72E4E4E4"
            android:textColor="#8FFFFFFF"
            android:textSize="15sp"
            android:paddingBottom="10dp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="#00FFFFFF"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/signup_button_design"
        android:text="@string/button_signup"
        android:fontFamily="@font/noto_sans"
        android:includeFontPadding="false"
        android:textColor="#FFFFFF"
        android:id="@+id/button_main_insert"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"/>


</LinearLayout>