<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity"
    android:background="#FF7F00"
    android:gravity="center_horizontal">


    <TextView
        android:id="@+id/signup_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create a new account..."
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:layout_above="@id/edittext_nickname"
        android:layout_marginBottom="64dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:id="@+id/edittext_nickname"
        android:hint="@string/edittext_nickname_hint_signup"
        android:inputType="text"
        android:textColorHint="#818181"
        android:textColor="#FF7F00"
        android:background="@drawable/corner_little_round_box_design"
        android:layout_above="@id/editText_ID"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="12dp"
        android:paddingLeft="8dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:id="@+id/editText_ID"
        android:hint="@string/edittext_id_hint_signup"
        android:textColorHint="#818181"
        android:textColor="#FF7F00"
        android:inputType="text"
        android:background="@drawable/corner_little_round_box_design"
        android:layout_above="@id/editText_password"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:paddingLeft="8dp"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:inputType="textPassword"
        android:id="@+id/editText_password"
        android:hint="@string/edittext_pw_hint_signup"
        android:textColor="#FF7F00"
        android:background="@drawable/corner_little_round_box_design"
        android:layout_centerInParent="true"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:paddingLeft="8dp"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:inputType="textPassword"
        android:id="@+id/editText_passwordcheck"
        android:hint="@string/edittext_pw_check_hint_signup"
        android:textColorHint="#818181"
        android:textColor="#FF7F00"
        android:background="@drawable/corner_little_round_box_design"
        android:layout_below="@id/editText_password"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:paddingLeft="8dp"/>

    <LinearLayout
        android:id="@+id/mailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_below="@id/editText_passwordcheck">
        <EditText
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:id="@+id/editText_emailid"
            android:hint="@string/edittext_email_hint_signup"
            android:inputType="text"
            android:textColorHint="#818181"
            android:textColor="#FF7F00"
            android:background="@drawable/corner_little_round_box_design"
            android:paddingLeft="8dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:text="@string/email_etc"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:layout_marginLeft="8dp"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mailLayout"
        android:layout_marginTop="32dp"
        android:background="@drawable/signup_button_design"
        android:text="sign up"
        android:textColor="#FFFFFF"
        android:id="@+id/button_main_insert"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"/>


</RelativeLayout>