<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Tutorial"
    android:background="@color/white">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_credit_calculator"
            android:textSize="20sp"
            android:layout_alignParentStart="true"
            android:textColor="@color/gist_red"
            android:fontFamily="@font/noto_sans"
            android:includeFontPadding="false"
            android:textStyle="bold"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"/>

        <View
            android:layout_width="1dp"
            android:layout_height="12dp"
            android:layout_marginTop="16dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:layout_toStartOf="@id/watch_log_calculator"
            android:background="@color/gist_red" />

        <TextView
            android:id="@+id/watch_log_calculator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@color/white"
            android:fontFamily="@font/noto_sans"
            android:includeFontPadding="false"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_centerVertical="true"
            android:text="@string/watch_log_calculator"
            android:textColor="@color/gist_red"
            android:textSize="12sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#E4E4E4"/>

    <EditText
        android:id="@+id/credit_calculator_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/category_box_unselected_design"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:padding="8dp"
        android:hint="@string/hint_title_calculator"
        android:textColor="@color/gist_dark_gray"
        android:gravity="center"
        android:textSize="15sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gist_red"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/white_gray"
        android:paddingEnd="0.5dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/type_classification"
            android:textSize="12sp"
            android:gravity="center"
            android:fontFamily="@font/noto_sans"
            android:includeFontPadding="false"
            android:textColor="@color/gist_dark_gray"
            android:padding="4dp"
            android:background="@drawable/calculator_category_box_design"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/title_classification"
            android:textSize="12sp"
            android:gravity="center"
            android:fontFamily="@font/noto_sans"
            android:includeFontPadding="false"
            android:textColor="@color/gist_dark_gray"
            android:padding="4dp"
            android:background="@drawable/calculator_category_box_design"/>
        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/credits_classification"
            android:textSize="12sp"
            android:gravity="center"
            android:fontFamily="@font/noto_sans"
            android:includeFontPadding="false"
            android:textColor="@color/gist_dark_gray"
            android:padding="4dp"
            android:background="@drawable/calculator_category_box_design"/>
        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/grade_classification"
            android:textSize="12sp"
            android:gravity="center"
            android:fontFamily="@font/noto_sans"
            android:includeFontPadding="false"
            android:textColor="@color/gist_dark_gray"
            android:padding="4dp"
            android:background="@drawable/calculator_category_box_design"/>
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/calculator_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/category_box_unselected_design"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>
    <TextView
        android:id="@+id/calculator_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/gray_calculator"
        android:textSize="12sp"
        android:textColor="@color/purple_calculator"
        android:fontFamily="@font/noto_sans"
        android:includeFontPadding="false"
        tools:text="Completed Credits:12 Grade Points:31.5/12 GPA:2.62/4.5"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="2dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp">
        <Button
            android:id="@+id/calculator_reset_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/red_solid_box"
            android:text="@string/reset_calculator"
            android:textColor="@color/white"
            android:fontFamily="@font/noto_sans"
            android:includeFontPadding="false"
            android:gravity="center"
            android:textSize="15sp" />
        <View
            android:layout_width="8dp"
            android:layout_height="match_parent"
            android:background="@color/white"/>
        <Button
            android:id="@+id/calculator_add_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/red_solid_box"
            android:text="@string/add_calculator"
            android:textColor="@color/white"
            android:fontFamily="@font/noto_sans"
            android:includeFontPadding="false"
            android:gravity="center"
            android:textSize="15sp" />
        <View
            android:layout_width="8dp"
            android:layout_height="match_parent"
            android:background="@color/white"/>
        <Button
            android:id="@+id/calculator_save_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/red_solid_box"
            android:text="@string/save_log_calculator"
            android:textColor="@color/white"
            android:fontFamily="@font/noto_sans"
            android:includeFontPadding="false"
            android:gravity="center"
            android:textSize="15sp" />
    </LinearLayout>
</LinearLayout>